--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   file_picker: ^10.2.0
+  firebase_storage: ^12.4.10
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
