--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   file_picker: ^10.2.0
   firebase_storage: ^12.4.10
   flutter_secure_storage: ^9.2.4
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
